# lyfe

./: README.md  main.py
backend/: .dockerignore  DOCKER_README.md  Dockerfile  README.md  apply_migration.py  chat.py  create_migration.py  database.py  delete_photos.py  docker-compose.yml  init_db.py  main.py  models.py  package.json  photo_service.py  photo_uploader_script.py  public_api.py  pyproject.toml  query_photos.py  routes.py
backend/migrations/versions/: 672c743beda8_update_photo_model_schema.py  7da03bb53cf3_add_path_field_to_photo_model.py
desktop_app/: README.md  package-lock.json  package.json  start.sh  test-app.sh
desktop_app/src/: index.html  main.js  renderer.js  styles.css
frontend/: LOCATION_EXTRACTION.md  README.md  package.json
frontend/src/: App.css  App.tsx  Chat.css  Chat.js  api.ts  index.css
frontend/src/components/: DeleteAllData.tsx  PhotoGallery.css  PhotoUpload.css  PhotoUpload.tsx  SearchBar.tsx
frontend/src/utils/: imageUtils.ts  locationUtils.ts  photoUtils.ts
old_frontend/: package-lock.json
old_frontend/src/: App.tsx  api.ts
old_frontend/src/components/: DeleteAllData.css  PhotoGallery.tsx  PhotoUpload.css  SearchBar.css
photos/: pyproject.toml
photos_service/: requirements.txt  script.py
python_app/: README.md  app.py  constants.py  main.py  photo_uploader_script.py  pyproject.toml  routes.py
tasks/: prd-enhanced-photo-processing-search.md  tasks-prd-enhanced-photo-processing-search.md
